--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
+backcall==0.1.0
+decorator==4.4.0
+defusedxml==0.6.0
+diff-match-patch==20181111
 Django==2.2.6
+django-import-export==1.2.0
+et-xmlfile==1.0.1
+ipdb==0.12.2
+ipython==7.8.0
+ipython-genutils==0.2.0
+jdcal==1.4.1
+jedi==0.15.1
+MarkupPy==1.14
+odfpy==1.4.0
+openpyxl==3.0.0
+parso==0.5.1
+pexpect==4.7.0
+pickleshare==0.7.5
 pkg-resources==0.0.0
+prompt-toolkit==2.0.10
 psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+Pygments==2.4.2
 pytz==2019.3
+PyYAML==5.1.2
 selenium==3.141.0
+six==1.12.0
 sqlparse==0.3.0
+tablib==0.14.0
+traitlets==4.3.3
 urllib3==1.25.6
+wcwidth==0.1.7
+xlrd==1.2.0
+xlwt==1.3.0
